--- a/public/help/index.html
+++ b/public/help/index.html
@@ -14,6 +14,7 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="PWAGram">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-57x57.png" sizes="57x57">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-60x60.png" sizes="60x60">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-72x72.png" sizes="72x72">
@@ -92,6 +93,5 @@
 <script src="/src/js/promise.js"></script>
 <script src="/src/js/fetch.js"></script>
 <script src="/src/js/app.js"></script>
-<script src="/src/js/feed.js"></script>
 </body>
 </html>
