--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="PWAGram">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-57x57.png" sizes="57x57">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-60x60.png" sizes="60x60">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-72x72.png" sizes="72x72">
@@ -108,9 +109,9 @@
   </div>
 </div>
 <script defer src="/src/js/material.min.js"></script>
+<script src="/src/js/promise.js"></script>
+<script src="/src/js/fetch.js"></script>
 <script src="/src/js/app.js"></script>
 <script src="/src/js/feed.js"></script>
-<script src="/src/js/fetch.js"></script>
-<script src="/src/js/promise.js"></script>
 </body>
 </html>
